--- a/index.html
+++ b/index.html
@@ -445,9 +445,23 @@
               </a></li>
             </ul>
         </div> 
+        <div class="footer-thumb">
+        <p class="form-text">Підпишіться на розсилку</p>
+        <form class="footer-form">  
+            <input 
+            class="footer-input" 
+            type="email" 
+            name="footer-subscribe" 
+            placeholder="E-mail">
+          <button type="submit" class="footer-btn">Підписатися <svg class="foooter-form-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-icon-send"></use>
+          </svg>
+        </button>
+        </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop " data-modal>
+    <div class="backdrop is-hidden " data-modal>
       <div class="modal">
 <button class="modal-close" type="button" data-modal-close>
   <svg class="modal-icon" width="18" height="18">
@@ -501,8 +515,8 @@
           <use href="./images/icons.svg#icon-Vector"></use>
         </svg>
       </span>
-    Погоджуюся з розсилкою та приймаю  
-    <a href="" class="label-policy">Умови договору</a>
+    Погоджуюся з розсилкою та приймаю
+    <a href="#" target="_blank" rel="noopener noreferrer nofollow"  class="label-policy">Умови договору</a>
 </label>
   </div>
   <button class="modal-btn" type="submit">Відправити</button>
