--- a/portfolio.html
+++ b/portfolio.html
@@ -341,6 +341,20 @@
             </li>
           </ul>
         </div>
+        <div class="footer-thumb">
+        <p class="form-text">Підпишіться на розсилку</p>
+        <form class="footer-form">  
+            <input 
+            class="footer-input" 
+            type="email" 
+            name="footer-subscribe" 
+            placeholder="E-mail">
+          <button type="submit" class="footer-btn">Підписатися <svg class="foooter-form-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-icon-send"></use>
+          </svg>
+        </button>
+        </form>
+        </div>
       </div>
     </footer>
   </body>
